Refactor repository and api
